--- a/app/src/main/res/layout/activity_reset_pass.xml
+++ b/app/src/main/res/layout/activity_reset_pass.xml
@@ -12,7 +12,7 @@
 
         <variable
             name="bean"
-            type="com.riggle.plug.data.model.FinzaProfileModel" />
+            type="com.riggle.plug.data.model.FinzaProfileData" />
 
         <variable
             name="vm"
