--- a/app/src/main/res/layout/holder_project_list.xml
+++ b/app/src/main/res/layout/holder_project_list.xml
@@ -23,14 +23,14 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:cardBackgroundColor="@color/white"
-        app:cardCornerRadius="@dimen/_8sdp"
         android:layout_marginHorizontal="@dimen/_12sdp"
         android:layout_marginVertical="@dimen/_5sdp"
         android:foreground="?selectableItemBackground"
-        android:onClick="@{v-> callback.onItemClick(v,bean,pos)}">
+        android:onClick="@{v-> callback.onItemClick(v,bean,pos)}"
+        app:cardBackgroundColor="@color/white"
+        app:cardCornerRadius="@dimen/_8sdp">
 
-        <LinearLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="@dimen/_10sdp"
@@ -38,37 +38,49 @@
             android:orientation="vertical">
 
             <TextView
+                android:id="@+id/tv1"
                 style="@style/TextView.InterRegular_12ssp"
                 android:fontFamily="@font/inter_semibold"
                 android:singleLine="true"
                 android:text='@{"Price: "+bean.price}'
                 android:textColor="@color/line_color"
                 android:textSize="@dimen/_12sdp"
-                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
+                android:id="@+id/tv2"
                 style="@style/TextView.InterRegular_12ssp"
-                android:singleLine="true"
                 android:layout_marginTop="@dimen/_2sdp"
+                android:fontFamily="@font/inter_semibold"
+                android:singleLine="true"
                 android:text="@{bean.title}"
                 android:textColor="@color/fsm_text_color"
-                android:fontFamily="@font/inter_semibold"
                 android:textSize="@dimen/_12sdp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tv1" />
 
             <TextView
                 style="@style/TextView.InterRegular_12ssp"
-                android:singleLine="true"
                 setAssignedDate2="@{bean.created_at}"
                 android:layout_marginTop="@dimen/_2sdp"
+                android:singleLine="true"
                 android:textColor="@color/fsm_text_color80"
                 android:textSize="@dimen/_10sdp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tv2" />
 
-        </LinearLayout>
+            <ImageView
+                android:layout_width="@dimen/_25sdp"
+                android:layout_height="@dimen/_25sdp"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginEnd="@dimen/_5sdp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                isChecked1="@{bean.selected}" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
     </androidx.cardview.widget.CardView>
 
 </layout>
