--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -106,7 +106,6 @@
                             android:layout_marginTop="@dimen/_15sdp"
                             android:background="@color/white"
                             android:padding="@dimen/_2sdp"
-                            android:src="@drawable/fsm_logo"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toTopOf="parent"
                             app:shapeAppearance="@style/ShapeAppearanceOverlay.App.CornerSize50Percent"
@@ -148,12 +147,12 @@
                         android:textSize="@dimen/_12sdp" />
 
                     <TextView
+                        android:id="@+id/tv4"
                         style="@style/TextView.InterRegular_12ssp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="@dimen/_5sdp"
                         android:gravity="center_vertical"
-                        android:text="(Manager)"
                         android:textColor="@color/fsm_bg_light_teal"
                         android:textSize="@dimen/_12sdp" />
 
