--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -33,6 +33,12 @@
         <item name="android:gravity">center_vertical</item>
     </style>
 
+    <style name="CustomDatePickerDialog" parent="Theme.MaterialComponents.Light.Dialog">
+        <item name="colorAccent">@color/line_color</item>
+        <item name="android:textColorPrimary">@android:color/white</item>
+        <item name="android:background">@color/transparent</item>
+    </style>
+
     <style name="TextView.Phone" parent="Widget.AppCompat.TextView">
         <item name="android:layout_height">@dimen/_40sdp</item>
         <item name="android:layout_width">wrap_content</item>
