bajaj error message shown done

--- a/app/src/main/res/layout/activity_verify_tag.xml
+++ b/app/src/main/res/layout/activity_verify_tag.xml
@@ -1205,7 +1205,8 @@
                     android:id="@+id/llRegisterTag"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical">
+                    android:orientation="vertical"
+                    android:visibility="gone">
 
                     <TextView
                         style="@style/TextView.InterRegular_12ssp"
